<resources>
    <string name="app_name">sanaBi</string>

    <!-- In App Texts -->
    <string name="product_button_text">Kaydet</string>
    <string name="product_title_text">Product Title</string>
    <string name="stock_total_text">Stock Total</string>
    <string name="product_price_text">Product Price</string>
    <string name="product_image_text">Product Image</string>
    <string name="product_description_text">Product Description</string>
    <string name="product_button_delete">Delete</string>
    <string name="product_button_update">Update</string>
    <string name="stock_code_text">Stock Code</string>
    <string name="spinner_category">Select a Category</string>
    <string name="dialog_category_text">Please, enter a category</string>
    <string name="listing_menu_sorting_text">Sorting</string>
    <string name="increasing_by_name">Increasing by Name</string>
    <string name="descending_by_name">Descending by Name</string>
    <string name="increasing_by_price">Increasing by Price</string>
    <string name="descending_by_price">Descending by Price</string>
    <string name="update_text">Update</string>
    <string name="delete_item_text">Delete Item</string>
    <string name="details_category_text">Category</string>

    <string name="unit_tl">₺</string>
    <string name="stock_total_number_text">total</string>
    <string name="stock_status_text">Stock Status</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Products</string>
    <string name="title_dashboard">Add</string>
    <string name="brand_name_text">Brand Name</string>

    <!-- Activity Names-->
    <string name="title_activity_main">sanaBi</string>
    <string name="listing_adapter_stock_total">Stok Yok</string>

    <!-- Empty Text-->
    <string name="product_empty_title">Your list is currently empty.</string>
    <string name="product_empty_subtitle">You can add new product</string>
    <string name="adding_empty_category">Please, select a category.</string>
    <string name="adding_empty_title">Please, enter a title.</string>
    <string name="adding_empty_description">Please, enter a description.</string>
    <string name="adding_empty_brand">Please, enter a brand.</string>
    <string name="adding_empty_price">Please, enter a price.</string>
    <string name="adding_empty_stock_code">Please, enter a stock code.</string>
    <string name="adding_empty_stock_total">Please, enter a stock total.</string>

    <!-- Spinner Stock Status Array -->
    <string-array name="stockStatus">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- Category Array -->
    <string-array name="category_array">
        <item>Water</item>
        <item>Snack</item>
        <item>Ice cream</item>
        <item>Beverage</item>
        <item>Milk and Breakfast</item>
        <item>Fruit and Vegetables</item>
        <item>Instant foods</item>
        <item>Basic food</item>
    </string-array>
</resources>