<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sorting_name_growing"
                android:icon="@drawable/ic_baseline_sort_by_alpha_24"
                android:title="@string/increasing_by_name" />

            <item
                android:id="@+id/action_sorting_name_decreasing"
                android:icon="@drawable/ic_baseline_sort_by_alpha_24"
                android:title="@string/descending_by_name" />

            <item
                android:id="@+id/action_sorting_price_growing"
                android:icon="@drawable/ic_baseline_sort_by_alpha_24"
                android:title="@string/increasing_by_price" />

            <item
                android:id="@+id/action_sorting_price_decreasing"
                android:icon="@drawable/ic_baseline_sort_by_alpha_24"
                android:title="@string/descending_by_price" />
        </menu>
    </item>


</menu>