<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black"
        android:contentDescription="@string/product_image_text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_25dp"
                android:layout_weight="12"
                android:text="@string/product_title_text"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_20dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/product_price_text"
                android:textColor="@color/red_ribbon"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productDescriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="12"
                android:text="@string/product_description_text"
                android:textSize="@dimen/text_size_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_button_delete"
                    android:layout_marginEnd="@dimen/margin_5dp"
                    android:textColor="@color/text_color"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                  />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_button_update"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:textColor="@color/black"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>